package com.company.customer.contactapi.service.model;

import java.io.Serializable;

public class CustomerAddressJson implements Serializable {

  private static final long serialVersionUID = 4548653912627080230L;

  private String street;
  private String city;
  private String state;
  private String zip;

  public String getStreet() {
    return street;
  }

  public String getCity() {
    return city;
  }

  public String getState() {
    return state;
  }

  public String getZip() {
    return zip;
  }

  public void setStreet(String street) {
    this.street = street;
  }

  public void setCity(String city) {
    this.city = city;
  }

  public void setState(String state) {
    this.state = state;
  }

  public void setZip(String zip) {
    this.zip = zip;
  }

}
