package com.company.customer.contactapi.service.model;

public enum PhoneType {
  MOBILE, HOME, WORK;
}
